@@ -12,14 +12,15 @@ import org.springframework.security.config.annotation.web.configurers.AbstractHt
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
+import org.springframework.security.web.util.matcher.RequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import java.util.Arrays;
-import java.util.List;
+
 
 import org.springframework.security.config.Customizer;
 
@@ -29,12 +30,42 @@ public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
     private final UserDetailsService userDetailsService;
+    private final PasswordEncoder passwordEncoder;
 
     public SecurityConfig(JwtAuthenticationFilter jwtAuthenticationFilter,
-                          UserDetailsService userDetailsService) {
+                          UserDetailsService userDetailsService,
+                          PasswordEncoder passwordEncoder) {
         this.jwtAuthenticationFilter = jwtAuthenticationFilter;
         this.userDetailsService = userDetailsService;
+        this.passwordEncoder = passwordEncoder;
     }
+
+    private static final String[] PUBLIC_AUTH_PATHS = {
+            "/auth/login",
+            "/auth/register",
+            "/auth/status"
+    };
+
+    private static final String[] PUBLIC_API_PATHS = {
+            "/",
+            "/api"
+    };
+
+    private static final String[] PUBLIC_SWAGGER_PATHS = {
+            "/swagger-ui/**",
+            "/v3/api-docs/**",
+            "/swagger-ui.html"
+    };
+
+    private static final String[] PUBLIC_MOOD_PATHS = {
+            "/moods",
+            "/moods/*/comments",
+            "/moods/feed"
+    };
+
+    private static final RequestMatcher COMMENTS_MATCHER = new AntPathRequestMatcher(
+            "/moods/*/comments","GET"
+    );
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
@@ -45,18 +76,24 @@ public class SecurityConfig {
                         session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .authorizeHttpRequests(auth -> auth
                         // 公开访问的端点
-                        .requestMatchers("/api/auth/**").permitAll()
-                        .requestMatchers("/", "/api").permitAll()
-                        .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
-                        // 允许公开获取心情列表和评论，但需要身份验证才能获取特定用户的心情
+                        //认证相关
+                        .requestMatchers(PUBLIC_AUTH_PATHS).permitAll()
+                        // API相关
+                        .requestMatchers(PUBLIC_API_PATHS).permitAll()
+                        // Swagger相关
+                        .requestMatchers(PUBLIC_SWAGGER_PATHS).permitAll()
+                        // 公开心情相关的GET
                         .requestMatchers(
-                            "/api/moods", 
-                            "/api/moods/*/comments"
+                                request -> Arrays.asList(PUBLIC_MOOD_PATHS).contains(request.getRequestURI()) &&
+                                        "GET".equals(request.getMethod())
                         ).permitAll()
+                        //评论公开访问
+                        .requestMatchers(COMMENTS_MATCHER).permitAll()
                         // 对于OPTIONS请求不需要认证（用于CORS预检）
                         .requestMatchers(request -> "OPTIONS".equals(request.getMethod())).permitAll()
                         // 所有其他请求都需要认证
                         .anyRequest().authenticated())
+                // 在UsernamePasswordAuthenticationFilter之前添加JWT过滤器
                 .addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
@@ -65,10 +102,12 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:8080", "http://localhost"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:8080", "http://localhost:8081", "http://localhost"));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
+        configuration.setExposedHeaders(Arrays.asList("Access-Control-Allow-Origin", "Access-Control-Allow-Credentials"));
         configuration.setAllowCredentials(true);
+        configuration.setMaxAge(3600L); // 1 hour
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
@@ -83,12 +122,9 @@ public class SecurityConfig {
     public DaoAuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
-        authProvider.setPasswordEncoder(passwordEncoder());
+        authProvider.setPasswordEncoder(passwordEncoder);
         return authProvider;
     }
 
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
+
 }
